The following list contains all changes to pgAdmin III, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2006-02-21 DP  1.4.2  Fix a typo in the admin pack README [August Zajonc]
    <li>2006-02-17 DP  1.4.2  Mask the password when logging the connection string.
    <li>2006-02-17 DP  1.4.2  Properly escape single quotes in connection strings.
    <li>2006-02-08 DP  1.4.2  Re-arrange the Win32 dependencies so that iconv, libxml2 and wxwidgets are located in $PGADIR/../pgadmin3-deps/
    <li>2006-02-05 DP  1.4.2  Properly enable the redo button in the Query Tool when appropriate, per PromoTrade
    <li>2006-01-30 DP  1.4.2  Add missing files to the Unix tarball, per Andrus - xtra/wxbuild/*, src/utils/precomp.cpp, src/main/pgAdmin3.rc
    <li>2006-01-23 MH  1.4.2  Read config files in the local encoding scheme
    <li>2006-01-17 DP  1.4.2  Display the defintion of set returning procedures correctly.
    <li>2006-01-17 DP  1.4.2  Fix drop procedure by including IN/OUT parameter flags in the name.
    <li>2006-01-13 DP  1.4.2  Fix role SQL - correctly define CREATEROLE/NOCREATEROLE per Andrus.
    <li>2006-01-09 MH  1.4.2  Honour the copy quoting setting properly in the SQL results pane
    <li>2006-01-09 MH  1.4.2  Set the initial Unicode/Local charset options correctly in the Export dialogue
    <li>2005-12-26 AP  1.4.2  Fix PK detection in EditGrid per Andrus Moor
    <li>2005-12-26 AP  1.4.2  Fix Bitmap Index explain per Alexander Kirpa
    <li>2005-12-23 DP  1.4.2  Use ELSIF not ELSEIF in pgagent.sql for compatibility with 7.x servers [Glen Sasek]
    <li>2005-12-15 DP  1.4.2  Exclude system schemas by name rather than OID, so that 'public' can be safely renamed.