@@ -18,7 +18,7 @@ EXTRA_DIST = \
 
 install-exec-hook:
 if APPBUNDLE
-	$(install_sh_DATA) PkgInfo $(bundledir)/PkgInfo
+	$(install_sh_DATA) PkgInfo $(bundledir)/Contents/PkgInfo
 	$(install_sh_DATA) Info.plist $(bundledir)/Contents/Info.plist
 	$(install_sh_DATA) "pgadmin3.icns" "$(bundledir)/Contents/Resources/pgAdmin3.icns"
 	$(install_sh_DATA) "sql.icns" "$(bundledir)/Contents/Resources/sql.icns"
