@@ -19,6 +19,8 @@ The following list contains all changes to pgAdmin III, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-03-20 DP  1.4.3  Install PkgInfo into the Contents directory in the OSX appbundle, per John DeSoi.
+    <li>2006-03-20 DP  1.4.3  Detect and correctly use GNU vs. BSD xargs when completing an appbundle install, per John DeSoi.
     <li>2006-02-21 DP  1.4.2  Fix a typo in the admin pack README [August Zajonc]
     <li>2006-02-17 DP  1.4.2  Mask the password when logging the connection string.
     <li>2006-02-17 DP  1.4.2  Properly escape single quotes in connection strings.
